--- a/package.json
+++ b/package.json
@@ -135,15 +135,15 @@
     "meow": "^9.0.0",
     "micromatch": "^4.0.4",
     "normalize-selector": "^0.2.0",
-    "postcss": "^7.0.35",
+    "postcss": "^8.3.9",
     "postcss-html": "^0.36.0",
-    "postcss-less": "^3.1.4",
+    "postcss-less": "^5.0.0",
     "postcss-media-query-parser": "^0.2.3",
     "postcss-resolve-nested-selector": "^0.1.1",
-    "postcss-safe-parser": "^4.0.2",
-    "postcss-sass": "^0.4.4",
-    "postcss-scss": "^2.1.1",
-    "postcss-selector-parser": "^6.0.5",
+    "postcss-safe-parser": "^6.0.0",
+    "postcss-sass": "^0.5.0",
+    "postcss-scss": "^4.0.1",
+    "postcss-selector-parser": "^6.0.6",
     "postcss-syntax": "^0.36.2",
     "postcss-value-parser": "^4.1.0",
     "resolve-from": "^5.0.0",
@@ -169,8 +169,8 @@
     "@types/imurmurhash": "^0.1.1",
     "@types/lodash": "^4.14.168",
     "@types/micromatch": "^4.0.1",
-    "@types/postcss-less": "^3.1.1",
-    "@types/postcss-safe-parser": "^4.0.0",
+    "@types/postcss-less": "^4.0.1",
+    "@types/postcss-safe-parser": "^5.0.0",
     "@types/style-search": "^0.1.1",
     "@types/svg-tags": "^1.0.0",
     "@types/write-file-atomic": "^3.0.1",
@@ -178,6 +178,9 @@
     "common-tags": "^1.8.0",
     "eslint": "^7.25.0",
     "eslint-config-stylelint": "^13.1.0",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-jest": "^25.0.5",
+    "eslint-plugin-node": "^11.1.0",
     "got": "^11.8.2",
     "husky": "^6.0.0",
     "jest": "^26.6.3",
@@ -187,7 +190,7 @@
     "lint-staged": "^10.5.4",
     "np": "^7.5.0",
     "npm-run-all": "^4.1.5",
-    "postcss-import": "^12.0.1",
+    "postcss-import": "^14.0.2",
     "prettier": "^2.2.1",
     "remark-cli": "^9.0.0",
     "typescript": "^4.2.4"
